feat: 優化錯誤格式
