# internal/handler/friendrequest.go
@@ -14,7 +14,7 @@ type FriendRequestsHandler struct {
 }
 
 // GetList
-// @Summary 獲取指定用戶ID收到的好友請求列表
+// @Summary 好友請求列表
 // @Tags FriendRequests
 // @Param body body request.FriendRequestsGetList true "param"
 // @Success 200 {object} response.APIResponse[response.FriendRequestsGetList]
@@ -43,6 +43,10 @@ func (h FriendRequestsHandler) GetList(ctx *gin.Context) {
 // @Tags FriendRequests
 // @Param body body request.FriendRequestsCreate true "param"
 // @Success 200 {object} response.APIResponse[string]
+// @Failure 400 {object} response.APIResponse[string] "Invalid user ID(s)"
+// @Failure 401 {object} response.APIResponse[string] "Unauthorized. Please log in to send friend requests."
+// @Failure 409 {object} response.APIResponse[string] "Friend request already exists between these users."
+// @Failure 500 {object} response.APIResponse[string] "Internal Server Error. Please try again later."
 // @Router /friend-requests [post]
 func (h FriendRequestsHandler) Create(ctx *gin.Context) {
 	req := &request.FriendRequestsCreate{}
@@ -59,7 +63,7 @@ func (h FriendRequestsHandler) Create(ctx *gin.Context) {
 }
 
 // Update
-// @Summary 指定用戶ID接受或拒絕來自requester-id的好友請求
+// @Summary 接受或拒絕來自id的好友請求
 // @Tags FriendRequests
 // @Param body body request.FriendRequestsUpdate true "param"
 // @Success 200 {object} response.APIResponse[string]
@@ -80,7 +84,7 @@ func (h FriendRequestsHandler) Update(ctx *gin.Context) {
 }
 
 // Delete
-// @Summary 指定用戶ID刪除來自requester-id的好友請求
+// @Summary 刪除來自requester-id的好友請求
 // @Tags FriendRequests
 // @Param body body request.FriendRequestsDelete true "param"
 // @Success 200 {object} response.APIResponse[string]
